--- a/cart/Dockerfile
+++ b/cart/Dockerfile
@@ -4,6 +4,6 @@ COPY pom.xml /services
 RUN mvn -f /services/pom.xml -B -DskipTests clean package
 
 FROM openjdk:13-jdk-oracle
-COPY --from=MAVEN_BUILD /services/target/catalog-0.0.1-SNAPSHOT.jar /app/backend.jar
+COPY --from=MAVEN_BUILD /services/target/cart-0.0.1-SNAPSHOT.jar /app/backend.jar
 WORKDIR /app
 ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "backend.jar"]
