--- a/helm/templates/shipping/config.yaml
+++ b/helm/templates/shipping/config.yaml
@@ -1,34 +1,34 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: {{ template "cart.fullname" . }}-config
+  name: {{ template "shipping.fullname" . }}-config
   namespace: {{ .Release.Namespace }}
 data:
   applicationYml: |
     server:
-      port: {{ .Values.cart.port }}
+      port: {{ .Values.shipping.port }}
 
     spring:
-      application.name: cart
+      application.name: shipping
       main:
         web-application-type: reactive
         cloud-platform: kubernetes
       profiles.active: production
 
       datasource:
-        url: jdbc:postgresql://${WEBSHOP_DB_HOST}:${WEBSHOP_DB_PORT}/${WEBSHOP_DB_DB}?useSSL=false&currentSchema=${WEBSHOP_CART_DB_SCHEMA}
-        username: ${WEBSHOP_CART_DB_USERNAME}
-        password: ${WEBSHOP_CART_DB_PASSWORD}
+        url: jdbc:postgresql://${WEBSHOP_DB_HOST}:${WEBSHOP_DB_PORT}/${WEBSHOP_DB_DB}?useSSL=false&currentSchema=${WEBSHOP_SHIPPING_DB_SCHEMA}
+        username: ${WEBSHOP_SHIPPING_DB_USERNAME}
+        password: ${WEBSHOP_SHIPPING_DB_PASSWORD}
       jpa:
         properties.hibernate:
           dialect: org.hibernate.dialect.PostgreSQLDialect
-          default_schema: ${WEBSHOP_CART_DB_SCHEMA}
+          default_schema: ${WEBSHOP_SHIPPING_DB_SCHEMA}
         hibernate.ddl-auto: update
         generate-ddl: true
         show-sql: false
 
     management:
-      server.port: {{ .Values.cart.managementPort | int }}
+      server.port: {{ .Values.shipping.managementPort | int }}
       endpoint:
         metrics:
           enabled: true
@@ -42,7 +42,7 @@ data:
         diskspace.enabled: false
       security.enabled: false
 
-    logging.level.root: {{ .Values.cart.loglevel }}
+    logging.level.root: {{ .Values.shipping.loglevel }}
 
     resilience4j:
       circuitbreaker:
@@ -60,9 +60,12 @@ data:
               - java.util.concurrent.TimeoutException
               - java.io.IOException
         instances:
-          cart:
+          shipping:
             baseConfig: default
-{{ include "cart.r4j.circuitbreaker.cart" . | indent 12 }}
+{{ include "shipping.r4j.circuitbreaker.shipping" . | indent 12 }}
+          cost:
+            baseConfig: default
+{{ include "shipping.r4j.circuitbreaker.cost" . | indent 12 }}
 
       retry:
         configs:
@@ -75,9 +78,12 @@ data:
               - org.springframework.web.client.HttpServerErrorException
               - java.io.IOException
         instances:
-          cart:
+          shipping:
             baseConfig: default
-{{ include "cart.r4j.retry.cart" . | indent 12 }}
+{{ include "shipping.r4j.retry.shipping" . | indent 12 }}
+          cost:
+            baseConfig: default
+{{ include "shipping.r4j.retry.cost" . | indent 12 }}
 
       thread-pool-bulkhead:
         configs:
@@ -87,9 +93,12 @@ data:
             queueCapacity: 10
             keepAliveDuration: 200
         instances:
-          cart:
+          shipping:
             baseConfig: default
-{{ include "cart.r4j.thread_pool_bulkhead.cart" . | indent 12 }}
+{{ include "shipping.r4j.thread_pool_bulkhead.shipping" . | indent 12 }}
+          cost:
+            baseConfig: default
+{{ include "shipping.r4j.thread_pool_bulkhead.cost" . | indent 12 }}
 
       ratelimiter:
         configs:
@@ -99,9 +108,12 @@ data:
             limitRefreshPeriod: 1s
             timeoutDuration: 0
         instances:
-          cart:
+          shipping:
             baseConfig: default
-{{ include "cart.r4j.ratelimiter.cart" . | indent 12 }}
+{{ include "shipping.r4j.ratelimiter.shipping" . | indent 12 }}
+          cost:
+            baseConfig: default
+{{ include "shipping.r4j.ratelimiter.cost" . | indent 12 }}
 
       timelimiter:
         configs:
@@ -109,6 +121,9 @@ data:
             timeoutDuration: 5s
             cancelRunningFuture: true
         instances:
-          cart:
+          shipping:
             baseConfig: default
-{{ include "cart.r4j.timelimiter.cart" . | indent 12 }}
+{{ include "shipping.r4j.timelimiter.shipping" . | indent 12 }}
+          cost:
+            baseConfig: default
+{{ include "shipping.r4j.timelimiter.cost" . | indent 12 }}
