--- a/helm/templates/shipping/service.yaml
+++ b/helm/templates/shipping/service.yaml
@@ -9,4 +9,6 @@ spec:
   - port: {{ .Values.shipping.service.port }}
     targetPort: {{ .Values.shipping.port }}
     protocol: TCP
+    name: http
   selector: {{ include "shipping.labels" . | nindent 4 }}
+
