--- a/cart/src/main/resources/application.yml
+++ b/cart/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   main:
     web-application-type: reactive
 
-spring.profiles.active: no-security
+spring.profiles.active: dev
 
 spring.resources.cache.cachecontrol.max-age: 600
 spring.resources.cache.cachecontrol.cache-public: true
