--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -12,5 +12,12 @@ version: 0.1.0
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
-appVersion: 1.16.0
+appVersion: 0.0.1
 
+dependencies:
+- name: prometheus
+  version: "11.7.0"
+  repository: "https://kubernetes-charts.storage.googleapis.com"
+- name: prometheus-adapter
+  version: "2.5.0"
+  repository: "https://kubernetes-charts.storage.googleapis.com"
