--- a/helm/templates/checkout/deployment.yaml
+++ b/helm/templates/checkout/deployment.yaml
@@ -10,6 +10,10 @@ spec:
   replicas: 1
   template:
     metadata:
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/path: /actuator/prometheus
+        prometheus.io/port: {{ .Values.checkout.managementPort | quote }}
       name: {{ template "checkout.fullname" . }}
       namespace: {{ .Release.Namespace }}
       labels: {{ include "checkout.labels" . | nindent 8 }}
@@ -18,11 +22,33 @@ spec:
       - name: {{ template "checkout.fullname" . }}
         image: {{ .Values.checkout.image }}
         imagePullPolicy: IfNotPresent
+        livenessProbe:
+          httpGet:
+            path: /actuator/health/liveness
+            port: {{ .Values.checkout.managementPort | int }}
+          initialDelaySeconds: 5
+          periodSeconds: 5
+        readinessProbe:
+          httpGet:
+            path: /actuator/health/readiness
+            port: {{ .Values.checkout.managementPort | int }}
+          initialDelaySeconds: 3
+          periodSeconds: 3
         ports:
         - containerPort: {{ .Values.checkout.port | int }}
+        volumeMounts:
+        - name: {{ template "checkout.fullname" . }}-application-yml
+          mountPath: /app/config
         env: 
 {{ include "webshop.auth.env.shipping" . | indent 10 }}
 {{ include "webshop.auth.env.cart" . | indent 10 }}
 {{ include "webshop.auth.env.catalog" . | indent 10 }}
 {{ include "webshop.auth.env.checkout" . | indent 10 }}
 {{ include "webshop.env.host" . | indent 10 }}
+      volumes:
+        - name: {{ template "checkout.fullname" . }}-application-yml
+          configMap:
+            name: {{ template "checkout.fullname" . }}-config
+            items:
+            - key: applicationYml
+              path: application.yml
