--- a/helm/templates/shipping/deployment.yaml
+++ b/helm/templates/shipping/deployment.yaml
@@ -10,6 +10,10 @@ spec:
   replicas: 1
   template:
     metadata:
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/path: /actuator/prometheus
+        prometheus.io/port: {{ .Values.shipping.managementPort | quote }}
       name: {{ template "shipping.fullname" . }}
       namespace: {{ .Release.Namespace }}
       labels: {{ include "shipping.labels" . | nindent 8 }}
@@ -18,10 +22,32 @@ spec:
       - name: {{ template "shipping.fullname" . }}
         image: {{ .Values.shipping.image }}
         imagePullPolicy: IfNotPresent
+        livenessProbe:
+          httpGet:
+            path: /actuator/health/liveness
+            port: {{ .Values.shipping.managementPort | int }}
+          initialDelaySeconds: 5
+          periodSeconds: 5
+        readinessProbe:
+          httpGet:
+            path: /actuator/health/readiness
+            port: {{ .Values.shipping.managementPort | int }}
+          initialDelaySeconds: 3
+          periodSeconds: 3
         ports:
         - containerPort: {{ .Values.shipping.port | int }}
+        volumeMounts:
+        - name: {{ template "shipping.fullname" . }}-application-yml
+          mountPath: /app/config
         env: 
 {{ include "webshop.db.env.secrets.shipping" . | indent 10 }} 
 {{ include "webshop.db.env.connection" . | indent 10 }}
 {{ include "webshop.auth.env.shipping" . | indent 10 }}
 {{ include "webshop.env.host" . | indent 10 }}
+      volumes:
+        - name: {{ template "shipping.fullname" . }}-application-yml
+          configMap:
+            name: {{ template "shipping.fullname" . }}-config
+            items:
+            - key: applicationYml
+              path: application.yml
