--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -4,7 +4,7 @@ genPasswordLength: 12
 
 namespace: webshop-demo
 
-host: webshop.example
+host: control-plane.minikube.internal
 
 volume:
   storageSize: 5Gi
@@ -26,12 +26,13 @@ postgres:
   port: 5432
 
 catalog:
-  image: trnhan251/catalog-service:latest
+  image: yourjayer/catalog-service:latest
   port: 8080
   managementPort: 10080
   loglevel: INFO
   service:
     port: 8080
+    managementPort: 10080
   db:
     schema: webshop_catalog_schema
     username: webshop_catalog_db_user
@@ -39,15 +40,27 @@ catalog:
   auth:
     username: webshop_catalog_auth_user
     password: ""
+  resilience4j:
+    retry:
+      catalog:
+    circuitbreaker:
+      catalog:
+    timelimiter:
+      catalog:
+    thread_pool_bulkhead:
+      catalog:
+    ratelimiter:
+      catalog:
 
   
 shipping:
-  image: trnhan251/shipping-service:latest
+  image: yourjayer/shipping-service:latest
   port: 8080
   managementPort: 10080
   loglevel: INFO
   service:
     port: 8080
+    managementPort: 10080
   db:
     schema: webshop_shipping_schema
     username: webshop_shipping_db_user
@@ -55,14 +68,31 @@ shipping:
   auth:
     username: webshop_shipping_auth_user
     password: ""
+  resilience4j:
+    retry:
+      shipping:
+      cost:
+    circuitbreaker:
+      shipping:
+      cost:
+    timelimiter:
+      shipping:
+      cost:
+    thread_pool_bulkhead:
+      shipping:
+      cost:
+    ratelimiter:
+      shipping:
+      cost:
 
 cart:
-  image: trnhan251/cart-service:latest
+  image: yourjayer/cart-service:latest
   port: 8080
   managementPort: 10080
   loglevel: INFO
   service:
     port: 8080
+    managementPort: 10080
   db:
     schema: webshop_cart_schema
     username: webshop_cart_db_user
@@ -73,16 +103,43 @@ cart:
   resilience4j:
     retry:
       cart:
-        test: 123
-        yolo: "asdf_movie"
+    circuitbreaker:
+      cart:
+    timelimiter:
+      cart:
+    thread_pool_bulkhead:
+      cart:
+    ratelimiter:
+      cart:
 
 checkout:
-  image: trnhan251/checkout-service:latest
+  image: yourjayer/checkout-service:latest
   port: 8080
   managementPort: 10080
   loglevel: INFO
   service:
     port: 8080
+    managementPort: 10080
   auth:
     username: webshop_checkout_auth_user
     password: ""
+  resilience4j:
+    retry:
+      checkout:
+    circuitbreaker:
+      checkout:
+    timelimiter:
+      checkout:
+    thread_pool_bulkhead:
+      checkout:
+    ratelimiter:
+      checkout:
+
+prometheus:
+  server:
+    global:
+      scrape_interval: 10s
+    retention: "10m"
+    persistentVolume.enabled: false
+  alertmanager.persistentVolume.enabled: false
+
