--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
     ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     ingress.kubernetes.io/ssl-redirect: "false"
-  name: {{ template "webshop.fullname" . }}-ingress
+  name: {{ template "webshop.fullname" . }}-ingress-backend
   labels: {{ include "webshop.labels" . | nindent 4 }}
     app.kubernetes.io/component: ingress
 spec:
@@ -31,3 +31,24 @@ spec:
         backend:
           serviceName: {{ template "shipping.fullname" . }}
           servicePort: {{ .Values.shipping.service.port }}
+
+---
+
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  annotations:
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    ingress.kubernetes.io/ssl-redirect: "false"
+  name: {{ template "webshop.fullname" . }}-ingress-frontend
+  labels: {{ include "webshop.labels" . | nindent 4 }}
+    app.kubernetes.io/component: ingress
+spec:
+  rules:
+  - host: {{ .Values.host }}
+    http:
+      paths:
+      - path: /
+        backend:
+          serviceName: {{ template "frontend.fullname" . }}
+          servicePort: {{ .Values.frontend.service.port }}
